更新 Android 配置文档